# cooltrack

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/age_data/: clod_classical_small_core.csv  cold_classical_large_core.csv  cold_nominal.csv  hot.csv
data/models/: photo_MIRI_F1000W_Flambda_wm2um.json  photo_MIRI_F1065C_Flambda_wm2um.json  photo_MIRI_F1130W_Flambda_wm2um.json  photo_MIRI_F1140C_Flambda_wm2um.json  photo_MIRI_F1280W_Flambda_wm2um.json  photo_MIRI_F1500W_Flambda_wm2um.json  photo_MIRI_F1550C_Flambda_wm2um.json  photo_MIRI_F1800W_Flambda_wm2um.json  photo_MIRI_F2100W_Flambda_wm2um.json  photo_MIRI_F2300C_Flambda_wm2um.json  photo_MIRI_F770W_Flambda_wm2um.json  photo_NIRISS_F277W_Flambda_wm2um.json  photo_NIRISS_F380M_Flambda_wm2um.json  photo_NIRISS_F430M_Flambda_wm2um.json  photo_NIRISS_F480M_Flambda_wm2um.json  radius_model.json  tint_model.json
notebooks/: evaluate_models.ipynb  explainer.ipynb  explore_dsdt.ipynb  inference_only_tracks.ipynb  test_cooling_tracks.ipynb  test_parquet_loading.ipynb
scripts/: main.py
src/cooltrack/: constants.py  cooltrack.py  data_loader.py  initial_conditions.py  integrator.py  models.py  smoothing.py
src/cooltrack.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
