[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cooltrack"
version = "0.1.0"
description = "Machine learning surrogate models for planetary thermal evolution cooling tracks."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "numpy",
    "scipy",
    "xgboost",
    "scikit-learn",
    "pyarrow",
    "matplotlib",
    "seaborn"
]